<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/app_settings_category">

        <CheckBoxPreference
            android:key="preference_goal_is_minimum"
            android:title="@string/preference_goal_is_minimum_title"
            android:summary="@string/preference_goal_is_minimum_summary" />

        <EditTextPreference
            android:defaultValue="2000"
            android:dialogTitle="@string/preference_calorie_goal_dialog_title"
            android:inputType="number"
            android:key="preference_calorie_goal"
            android:summary="@string/preference_calorie_goal_summary"
            android:title="@string/preference_calorie_goal_title" />

    </PreferenceCategory>
</PreferenceScreen>